# lexa-logger

./: Cargo.toml
examples/: simple.rs
src/: builder.rs  echo.rs  initiator.rs  lib.rs  noop.rs  settings.rs  stdout.rs
src/layout/: cell.rs  grid.rs  mod.rs  row.rs  style.rs
src/stdout/: builder.rs  extension.rs  mod.rs
