[package]
name = "lexa-logger"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/PhiSyX/lexa-logger"
description = "Un logger parmi tant d'autres."

[features]
serde = ["dep:serde"]

[dependencies]
chrono = { version = "^0.4", default-features = false, features = ["clock"] }
console = { version = "^0.15" }
lazy_static = { version = "^1.4" }
log = { version = "^0.4", features = ["std"] }
serde = { version = "^1.0", features = ["derive"], optional = true }
regex = { version = "^1.9" }
unicode-width = { version = "^0.1" }
